refactor project struct